Landing page services reformatted into list

--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
     <link rel="stylesheet" href="assets/css/main.css" />
 
-    <noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+    <noscript>
+        <link rel="stylesheet" href="assets/css/noscript.css" />
+    </noscript>
 </head>
 
 <body class="landing is-preload">
@@ -41,13 +43,15 @@
         <section id="banner">
             <div class="inner">
                 <h2>Convex Umbrella</h2>
-                <p>
-                    <a href="tutors.html">Tutors</a><br />
-                    <a href="teaching_consultants.html">Teaching Consultants</a><br />
-                    <a href="http://html5up.net">Art</a><br />
-                    <a href="">Stories</a>
+                <ul class="services">
+                    <li><a href="tutors.html">Tutors</a></li>
+                    <li><a href="teaching_consultants.html">Teaching Consultants</a></li>
+                    <li><a href="http://html5up.net">Art</a></li>
+                    <li><a href="">Stories</a></li>
+                </ul>
 
-                </p>
+
+
                 <!-- Activate button [currently not necessary]
                 <ul class="actions special">
                     <li><a href="#" class="button primary">Activate</a></li>
