--- a/index.html
+++ b/index.html
@@ -46,9 +46,10 @@
                 <ul class="services">
                     <li><a href="tutors.html">Tutors</a></li>
                     <li><a href="teaching_consultants.html">Teaching Consultants</a></li>
-                    <li><a href="http://html5up.net">Art</a></li>
+                    <li><a href="elements.html">Art</a></li>
                     <li><a href="">Stories</a></li>
                 </ul>
+
 
 
 
@@ -177,6 +178,9 @@
 
         <!-- Footer -->
         <footer id="footer">
+            <ul>
+                <h5><a href="contactus.html">Contact Us</a></h5>
+            </ul>
             <ul class="icons">
                 <li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
                 <li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
