Removed accidental inclusion of elements.html

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                 <ul class="services">
                     <li><a href="tutors.html">Tutors</a></li>
                     <li><a href="teaching_consultants.html">Teaching Consultants</a></li>
-                    <li><a href="elements.html">Art</a></li>
+                    <li><a href="">Art</a></li>
                     <li><a href="">Stories</a></li>
                 </ul>
 
