Contact us hyperlink added on tutors page and teaching consulting page

--- a/tutors.html
+++ b/tutors.html
@@ -69,6 +69,9 @@
 
         <!-- Footer -->
         <footer id="footer">
+            <ul>
+                <h5><a href="contactus.html">Contact Us</a></h5>
+            </ul>
             <ul class="icons">
                 <li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
                 <li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
