Added content to landing page, tutors page and teaching consultancy

--- a/index.html
+++ b/index.html
@@ -42,6 +42,8 @@
         <!-- Banner -->
         <section id="banner">
             <div class="inner">
+                <!--insert image somewhere here-->
+                <!--<img src="rainstill.jpg" alt="Convex Umbrella Logo" style="width:16em;" class="inner"> -->
                 <h2>Convex Umbrella</h2>
                 <ul class="services">
                     <li><a href="tutors.html">Tutors</a></li>
@@ -68,7 +70,8 @@
                 <header class="major">
                     <h2>Convex Tutors</h2>
                     <p>
-                        random text sjh ajdfha dfhlsdh ds sdfkhlag sjdf sdfavo sd ssfdasf asfa <br /> sdf sdf sd sdg sdf sd sdfsddf s dfs fdffsd qoin weodj soakkvh akh pjek <br>
+                        At Convex Tutors, we hand pick educators of the utmost quality in order to deliver the best experience possible for our students. Our tutors are not just tutors. They are mentors, climbers, writers, musicians and generally inspiring people. But above
+                        all, our tutors are excellent at what they teach and this is displayed in the results of our students.
                     </p>
                     <ul class="actions stacked">
                         <li><a href="tutors.html" class="button fit">Learn More</a></li>
@@ -114,28 +117,24 @@
         -->
 
 
-        <!--<section id="two" class="wrapper style4">
-            <section class="inner">
-                
-            </section>
-        </section>
-        -->
-
         <!-- Section 3: Teaching Consultants -->
         <section id="three" class="wrapper style3 special">
             <div class="inner">
                 <header class="major">
                     <h2>Teaching Consultants</h2>
-                    <p>Our experts can help you or your institution develop the perfect course.</p>
+                    <p>Convex Consultancy delivers a variety of bespoke course creation and development courses. For educational institutions that prefer an alternative approach to applied economics, we build courses that integrate some of the world’s most
+                        prominent and current policies and technologies into the Economics and Development Economics world.
+                    </p>
                 </header>
                 <ul class="features">
                     <li class="icon solid fa-laptop">
-                        <h3>Online blah blah [service feature]</h3>
-                        <p>Short description of the feature of the service.</p>
+                        <h3>Online Courses</h3>
+                        <p>Live online course development can be provided and if you miss the class, it will be available to watch at any time afterwards.
+                        </p>
                     </li>
                     <li class="icon solid fa-headphones-alt">
-                        <h3>Something else indicted by some icon </h3>
-                        <p>Short description of the feature of the serivce.</p>
+                        <h3>In-Person Courses</h3>
+                        <p>Courses and workshops can be developed and taught in person</p>
                     </li>
                     <!--
                     <li class="icon fa-heart">
@@ -167,11 +166,11 @@
                 <header>
                     <p>Convex Umbrella Presents</p>
                     <h2>The Scientist Chronicles</h2>
-                    <p>Synopsis sjfh sdfhlhsdf sljdfh sfdfdrewpibcjlf sjfjdliha naur skjfu aiebfo hdbdjd dud aia </p>
+                    <p>The Scientist Chronicles are a collection of short and long stories that challenge the ideas of what it means to be a scientist. Each story is a stand-alone story about various scientists across the breadth of time and space.</p>
                 </header>
                 <ul class="actions stacked">
                     <!--<li><a href="#" class="button fit primary">Activate</a></li>-->
-                    <li><a href="#" class="button fit">Learn More</a></li>
+                    <li><a href="#" class="button fit">Coming Soon</a></li>
                 </ul>
             </div>
         </section>
