--- a/teaching_consultants.html
+++ b/teaching_consultants.html
@@ -42,26 +42,53 @@
         <article id="main">
             <header>
                 <h2>Teaching Consultants</h2>
-                <p>Main message to take away from the page on teaching consulting.</p>
+                <p>Our experts can help you or your institution develop the perfect course</p>
             </header>
             <section class="wrapper style5">
                 <div class="inner">
 
-                    <h3>subtitle</h3>
-                    <p>England's players have taken a knee before games at the Euros to highlight the fight against racial inequality. The FA said it was "appalled" by the "online racism" of the three players following the defeat at Wembley. It added: "We
-                        could not be clearer that anyone behind such disgusting behaviour is not welcome in following the team. "We will do all we can to support the players affected while urging the toughest punishments possible for anyone responsible.
-                        "We will continue to do everything we can to stamp discrimination out of the game, but we implore government to act quickly and bring in the appropriate legislation so this abuse has real life consequences.</p>
-
-                    <p>"Social media companies need to step up and take accountability and action to ban abusers from their platforms, gather evidence that can lead to prosecution and support making their platforms free from this type of abhorrent abuse."</p>
+                    <p>
+                        The current educational system, as it is, works for some people but for many educational institutions, students are looking for more than just the theory behind what they are learning. Convex Consultancy provides this extra layer to our student’s knowledge.
+                        When developing Economics based courses, we focus heavily on applying the concepts to real world examples and current events.
+                    </p>
 
                     <hr />
 
-                    <h4>another subtitle</h4>
-                    <p>"Social media companies need to step up and take accountability and action to ban abusers from their platforms, gather evidence that can lead to prosecution and support making their platforms free from this type of abhorrent abuse."</p>
+                    <section class="spotlight">
+                        <div class="image"><img src="images/pic01.jpg" alt="" /></div>
+                        <div class="content">
+                            <h2>Blockchain Technology</h2>
+                            <p>Blockchain Technology on solving Development Economics issues. (perhaps more brief explanation why you include this)</p>
+                        </div>
+                    </section>
+                    <section class="spotlight">
+                        <div class="image"><img src="images/pic02.jpg" alt="" /></div>
+                        <div class="content">
+                            <h2>Global Supply Chain Shortages</h2>
+                            <p>description if you want</p>
+                        </div>
+                    </section>
+                    <section class="spotlight">
+                        <div class="image"><img src="images/pic02.jpg" alt="" /></div>
+                        <div class="content">
+                            <h2>The Role of Democracy in Economic Development</h2>
+                            <p>description if you want</p>
+                        </div>
+                    </section>
+                    <section class="spotlight">
+                        <div class="image"><img src="images/pic02.jpg" alt="" /></div>
+                        <div class="content">
+                            <h2>Cartels in modern day industry</h2>
+                            <p>description if you want</p>
+                        </div>
+                    </section>
 
-                    <p>England's players have taken a knee before games at the Euros to highlight the fight against racial inequality. The FA said it was "appalled" by the "online racism" of the three players following the defeat at Wembley. It added: "We
-                        could not be clearer that anyone behind such disgusting behaviour is not welcome in following the team. "We will do all we can to support the players affected while urging the toughest punishments possible for anyone responsible.
-                        "We will continue to do everything we can to stamp discrimination out of the game, but we implore government to act quickly and bring in the appropriate legislation so this abuse has real life consequences.</p>
+                    <hr>
+
+                    <p>
+                        <i>Please note, all of the courses can and will be moderated to fit the needs of the client. Many of the courses are built from scratch to fit the client’s needs more precisely.</i>
+                    </p>
+
 
                 </div>
             </section>
