--- a/tutors.html
+++ b/tutors.html
@@ -8,8 +8,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
     <link rel="stylesheet" href="assets/css/main.css" />
     <noscript>
-		<link rel="stylesheet" href="assets/css/noscript.css" />
-	</noscript>
+        <link rel="stylesheet" href="assets/css/noscript.css" />
+    </noscript>
 </head>
 
 <body class="is-preload">
@@ -43,25 +43,74 @@
             <header>
                 <h2>Tutors</h2>
                 <p>Main message to take away from the page on tutors.</p>
+                <hr>
+
+                <h5>Mathematics</h5>
+                <h5>Economics</h5>
+                <h5>Physics</h5>
+                <h5>Chemistry</h5>
+                <h5>Biology</h5>
+                <h5>History</h5>
+                <h5>English</h5>
+                <p>and more</p>
             </header>
             <section class="wrapper style5">
                 <div class="inner">
 
-                    <h3>subtitle</h3>
-                    <p>England's players have taken a knee before games at the Euros to highlight the fight against racial inequality. The FA said it was "appalled" by the "online racism" of the three players following the defeat at Wembley. It added: "We
-                        could not be clearer that anyone behind such disgusting behaviour is not welcome in following the team. "We will do all we can to support the players affected while urging the toughest punishments possible for anyone responsible.
-                        "We will continue to do everything we can to stamp discrimination out of the game, but we implore government to act quickly and bring in the appropriate legislation so this abuse has real life consequences.</p>
+                    <h2 style="text-align: center;">Testimonials</h2>
+                    <blockquote>
+                        “Alex has simply been a wonderful tutor and source of support for Julian over this past academic year. Alex managed to raise Julian's confidence and consequently his A level results very effectively and very quickly. <br><br> Julian
+                        thoroughly enjoyed his time with Alex - so much so that he is now aiming to continue studying economics at College. We are very pleased and grateful to Alex for all the hard work that he put in to help Julian get that A he needed
+                        to gain a place at his top-choice in New York.<br><br> We wish Alex all the best in his future endeavours and would highly recommend him and his academic services. Best wishes, Marina
+                    </blockquote>
 
-                    <p>"Social media companies need to step up and take accountability and action to ban abusers from their platforms, gather evidence that can lead to prosecution and support making their platforms free from this type of abhorrent abuse."</p>
+                    <h3 style="text-align:center;">*****</h3>
 
-                    <hr />
+                    <blockquote>
+                        “Alex has been integral in providing much needed support for our two sons throughout University.My sons have been very open about Alex’s flexibility, patience and excellent knowledge of the Economics syllabus for their respective university courses.<br><br>                        Our eldest son has just completed his degree and is very grateful for Alex’s support and our younger son, who has just completed his 1st year, has nothing but praise for Alex’s teaching methods.”
+                    </blockquote>
 
-                    <h4>another subtitle</h4>
-                    <p>"Social media companies need to step up and take accountability and action to ban abusers from their platforms, gather evidence that can lead to prosecution and support making their platforms free from this type of abhorrent abuse."</p>
+                    <h3 style="text-align:center;">*****</h3>
 
-                    <p>England's players have taken a knee before games at the Euros to highlight the fight against racial inequality. The FA said it was "appalled" by the "online racism" of the three players following the defeat at Wembley. It added: "We
-                        could not be clearer that anyone behind such disgusting behaviour is not welcome in following the team. "We will do all we can to support the players affected while urging the toughest punishments possible for anyone responsible.
-                        "We will continue to do everything we can to stamp discrimination out of the game, but we implore government to act quickly and bring in the appropriate legislation so this abuse has real life consequences.</p>
+                    <blockquote>
+                        "The end of AS level assessments went really well! I came 2nd in the year and got 92% all down to your tutoring. Many thanks, Sinclair."
+                    </blockquote>
+
+                    <h3 style="text-align:center;">*****</h3>
+
+                    <blockquote>
+                        Hi Alex, This is really kind of you.... I just received a phone call from Tristan... He got an 8 in his GCSE Math. He is happy with his result in Math. Thanks for your help. Hope you are doing well. Marie
+                    </blockquote>
+
+                    <h3 style="text-align: center;">*****</h3>
+
+                    <blockquote>
+                        You have been great with teaching Noemi and gave her lots of confidence in her ability in maths, also you have been very gracious in last minute changes in arrangement, we truly appreciate that! Hopefully you would have no problem filling in the slot,
+                        and we would be very happy to give recommendations to all our friends, or should you require any reference from us. Again we would like to express our gratitude for all your help in bringing Noemi up to speed with her maths. Gary.
+                    </blockquote>
+
+                    <h3 style="text-align: center;">*****</h3>
+                    <blockquote>
+                        "Good morning Alex. We were going to text you this am. He got an A in Economics!! Thank you so much for your help and we would really appreciate it if we can continue with you going forwards. He got an A for maths as well. Two Bs Latin and French. We
+                        are having a meeting with head or sixth form to discuss what to drop, most probably French. Yuki"
+                    </blockquote>
+
+                    <p style="text-align: center;">REFERENCES ON REQUEST</p>
+
+                    <hr>
+
+                    <h2 style="text-align:center;">Award History</h2>
+                    <h4 style="text-align: center;">- Awarded by Golden Circle -</h4>
+
+                    <p>
+                        "This month we are introducing our Top Tutor Awards. Each month in our newsletter, we will celebrate the success of one of our tutors and send a gift to mark our gratitude. Whether it be positive client feedback, or an inspiring lesson plan, we want to
+                        share your contributions with the rest of the team.
+                    </p>
+                    <p>
+                        The first recipient of this award is Alex Blair, who has been recognised for his enthusiasm and excellent client feedback. His students have made demonstrable progress during this academic year including one student who received the Primary aths Challenge
+                        award - an acheivement credited to Alex's hard work. Congratulations!"
+                    </p>
+                    <span><img src="alex_pic.png" alt="Alex Face Extract" class="image fit"></span>
 
                 </div>
             </section>
