Missing quotations in testimonials section

--- a/tutors.html
+++ b/tutors.html
@@ -61,7 +61,7 @@
                     <blockquote>
                         “Alex has simply been a wonderful tutor and source of support for Julian over this past academic year. Alex managed to raise Julian's confidence and consequently his A level results very effectively and very quickly. <br><br> Julian
                         thoroughly enjoyed his time with Alex - so much so that he is now aiming to continue studying economics at College. We are very pleased and grateful to Alex for all the hard work that he put in to help Julian get that A he needed
-                        to gain a place at his top-choice in New York.<br><br> We wish Alex all the best in his future endeavours and would highly recommend him and his academic services. Best wishes, Marina
+                        to gain a place at his top-choice in New York.<br><br> We wish Alex all the best in his future endeavours and would highly recommend him and his academic services. Best wishes, Marina"
                     </blockquote>
 
                     <h3 style="text-align:center;">*****</h3>
@@ -79,14 +79,14 @@
                     <h3 style="text-align:center;">*****</h3>
 
                     <blockquote>
-                        Hi Alex, This is really kind of you.... I just received a phone call from Tristan... He got an 8 in his GCSE Math. He is happy with his result in Math. Thanks for your help. Hope you are doing well. Marie
+                        "Hi Alex, This is really kind of you.... I just received a phone call from Tristan... He got an 8 in his GCSE Math. He is happy with his result in Math. Thanks for your help. Hope you are doing well. Marie."
                     </blockquote>
 
                     <h3 style="text-align: center;">*****</h3>
 
                     <blockquote>
-                        You have been great with teaching Noemi and gave her lots of confidence in her ability in maths, also you have been very gracious in last minute changes in arrangement, we truly appreciate that! Hopefully you would have no problem filling in the slot,
-                        and we would be very happy to give recommendations to all our friends, or should you require any reference from us. Again we would like to express our gratitude for all your help in bringing Noemi up to speed with her maths. Gary.
+                        "You have been great with teaching Noemi and gave her lots of confidence in her ability in maths, also you have been very gracious in last minute changes in arrangement, we truly appreciate that! Hopefully you would have no problem filling in the slot,
+                        and we would be very happy to give recommendations to all our friends, or should you require any reference from us. Again we would like to express our gratitude for all your help in bringing Noemi up to speed with her maths. Gary."
                     </blockquote>
 
                     <h3 style="text-align: center;">*****</h3>
