profile picture reformatted

--- a/tutors.html
+++ b/tutors.html
@@ -110,7 +110,8 @@
                         The first recipient of this award is Alex Blair, who has been recognised for his enthusiasm and excellent client feedback. His students have made demonstrable progress during this academic year including one student who received the Primary aths Challenge
                         award - an acheivement credited to Alex's hard work. Congratulations!"
                     </p>
-                    <span><img src="alex_pic.png" alt="Alex Face Extract" class="image fit"></span>
+                    <span><img src="images/alex_pic.png" alt="Alex Face Extract" class="profile_pic"></span>
+                    <!--can also use image fit class-->
 
                 </div>
             </section>
