Alex's profile picture reloacted to images directory and code for front page logo added

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <section id="banner">
             <div class="inner">
                 <!--insert image somewhere here-->
-                <!--<img src="rainstill.jpg" alt="Convex Umbrella Logo" style="width:16em;" class="inner"> -->
+                <img src="images/umbrella.png" alt="Convex Umbrella Logo" class="front_page_logo">
                 <h2>Convex Umbrella</h2>
                 <ul class="services">
                     <li><a href="tutors.html">Tutors</a></li>
